sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:15: error: not found: value grtValueCount
    for (i<- grtValueCount()-2 to k by -1)
             ^