sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var swapped= false
  var j=getValueCount()-2
  var k=0
  do {
    swapped=false
    for (i <- 0 to j)
      if (! isSmaller(i,i+1)){
      swap(i,i+1)
        swapped=true;
        
    }
    j=j-1
    for (i<- grtValueCount()-2 to k by -1)
      if (! isSmaller(i,i+1)){
        swap(i,i+1)
        swapped=true;
       
      }
   k=k+1 
   
  }  while (swapped);
}
